# spatial_domain_toolbox

./: README.md  antigradient.c  arrayloop.c  compute_displacement.py  conv3.c  estimate_displacement.py  gaussian_app.py  make_Abc_fast.py  make_tensors_fast.py  memory_efficient.py  min_quadform.c  min_quadform.py  neighborhoodloop.c  normconv.c  polyexp.py  polyexp_solve_system.c  prepare_displacement_matrices.c  prepare_displacement_matrices.py  setup.cfg  tensorprodc.c  test_memory_efficient.py  test_synthetic.py  velocity_segment.c
src/spatial_domain_toolbox/: compute_displacement.py  estimate_displacement.py  memory_efficient.py  min_quadform.py  polyexp.py  prepare_displacement_matrices.py
tests/: test_memory_efficient.py  test_memory_efficient2D.py
