[metadata]
name = spatial_domain_toolbox
version = 0.0.1
author = Mathieu Leocmach
author_email = mathieu.leocmach@univ-lyon1.fr
description = Python reimplementation of Gunnar Farnebäck's optical flow algorythms
long_description = file: README.md
long_description_content_type = text/markdown
keywords = optical flow
url = https://github.com/MathieuLeocmach/spatial_domain_toolbox
project_urls =
    Bug Tracker = https://github.com/MathieuLeocmach/spatial_domain_toolbox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    numba

[options.packages.find]
where = src
